--- a/readme.org
+++ b/readme.org
@@ -54,8 +54,7 @@ considered deprecated.
 
 *** 1.2.0
 
-- Hooks and handlers are now "funcallable", for instance with =(funcall HOOK
-  ARGS)=.
+- Hooks and handlers are now "funcallable", for instance with =(funcall HOOK ARGS)=.
 - =find-handler=: New optional =include-diabled= argument.
 - Fix bug when appending handler.
 - Add =wait-on= helper.
